First funtionality added

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 <title>Uruguayisame</title>
 <script   src="http://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+<script type="text/javascript" src="main.js"></script>
 </head>
 
 <body>
 <h1>Uruguayisame</h1>
+<input type="text" id="inputText"/>
+<button id="submit">Uruguayisame</button>    
 
-<p id="main1"></p>
-<p id="main2"></p>
-<p id="main3"></p>
+<p id="result"></p>
 
 </body>
 
