Adds HTML structure

--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Uruguayisame</title>
-<script   src="http://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
-<script type="text/javascript" src="main.js"></script>
-</head>
+    <html>
+      <head>
+        <title>Uruguayiza.me</title>
+        <meta charset="utf-8">
+        <meta name="description" content="Con Uruguayiza.me pod&eacute;s escribir como un mism&iacute;simo uruguayo! Escrib&iacute; la frase que quer&eacute;s uruguayizar, apret&aacute; el bot&oacute;n... ¡y compart&iacute; tu uruguay&eacute;z en las redes sociales!" />
+        <meta name="author" content="Crafted">
+        <meta name="keywords" content="uruguay, uruguayizar, uruguayizame, uruguayiza.me, uruguayo, traducir, traducotr, chori, bonomi, chengue, alpargata, botija, gurí, uruguay nomá, maomeno" />
+        <!-- Optimized mobile viewport -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+        <!-- CSS -->
+        <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
+        <!-- HTML5 IE Enabling Script -->
+      </head>
 
-<body>
-<h1>Uruguayisame</h1>
-<input type="text" id="inputText"/>
-<button id="submit">Uruguayisame</button>    
+      <body>
+        <h1>Uruguayizame</h1>
+        <input type="text" id="inputText"/>
+        <button id="submit">Dale, bo.</button>    
 
-<p id="result"></p>
+        <p id="result"></p>
 
-</body>
-
-</html>
+        <!-- JavaScript at the bottom for fast page loading -->
+        <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="main.js"></script>
+      </body>
+    </html>
