--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
         <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
         <!-- CSS -->
+        <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
         <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
         <!-- HTML5 IE Enabling Script -->
       </head>
 
       <body>
-        <h1>Uruguayizame</h1>
+        <h1 class="logo">Uruguayizame</h1>
         <input type="text" id="inputText"/>
         <button id="submit">Dale, bo.</button>    
 
