Adds styles to input and button

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
       </head>
 
       <body>
-        <h1 class="logo">Uruguayizame</h1>
-        <input type="text" id="inputText"/>
-        <button id="submit">Dale, bo.</button>    
 
-        <p id="result"></p>
+        <div class="wrapper">
+          <h1 class="logo">Uruguayiza.me</h1>
+
+          <div class="field group">
+            <input placeholder="Escrib&iacute; tu frase ac&aacute;" type="text" id="inputText"/>
+            <button id="submit">Dale, bo.</button>
+          </div>
+
+          <p id="result"></p>
+        </div>
 
         <!-- JavaScript at the bottom for fast page loading -->
         <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
