--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
           </div>
 
           <p id="result"></p>
+
+          <a href="https://www.facebook.com/sharer/sharer.php?u=uruguayiza.me" target="_blank">
+            Share on Facebook
+          </a>
+          <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Furuguayiza.me&text=Compart%C3%AD%20Uruguayiza.me%20con%20tus%20amigos!!&original_referer=" target="_blank">
+            Share on Twitter
+          </a>
         </div>
 
         <!-- JavaScript at the bottom for fast page loading -->
