Adds social icons and basic styles to result pane

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <button id="submit">Dale, bo.</button>
           </div>
 
-          <p id="result"></p>
+          <p id="result" class="hide"></p>
 
           <a href="https://www.facebook.com/sharer/sharer.php?u=uruguayiza.me" target="_blank">
-            Share on Facebook
+            <img src="">
           </a>
           <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Furuguayiza.me&text=Compart%C3%AD%20Uruguayiza.me%20con%20tus%20amigos!!&original_referer=" target="_blank">
             Share on Twitter
