Adds new images and styles for share icons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Uruguayiza.me</title>
         <meta charset="utf-8">
         <meta name="description" content="Con Uruguayiza.me pod&eacute;s escribir como un mism&iacute;simo uruguayo! Escrib&iacute; la frase que quer&eacute;s uruguayizar, apret&aacute; el bot&oacute;n... ¡y compart&iacute; tu uruguay&eacute;z en las redes sociales!" />
-        <meta name="author" content="Crafted">
+        <meta name="author" content="Sebastian Heit">
         <meta name="keywords" content="uruguay, uruguayizar, uruguayizame, uruguayiza.me, uruguayo, traducir, traducotr, chori, bonomi, chengue, alpargata, botija, gurí, uruguay nomá, maomeno" />
         <!-- Optimized mobile viewport -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
@@ -31,12 +31,14 @@
 
           <p id="result" class="hide"></p>
 
-          <a href="https://www.facebook.com/sharer/sharer.php?u=uruguayiza.me" target="_blank">
-            <img src="">
-          </a>
-          <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Furuguayiza.me&text=Compart%C3%AD%20Uruguayiza.me%20con%20tus%20amigos!!&original_referer=" target="_blank">
-            Share on Twitter
-          </a>
+          <footer>
+            <a class="share-icon" href="https://www.facebook.com/sharer/sharer.php?u=uruguayiza.me" target="_blank">
+              <img src="facebook.svg" alt="Facebook">
+            </a>
+            <a class="share-icon" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Furuguayiza.me&text=Compart%C3%AD%20Uruguayiza.me%20con%20tus%20amigos!!&original_referer=" target="_blank">
+              <img src="twitter.svg" alt="Twitter">
+            </a>
+          </footer>
         </div>
 
         <!-- JavaScript at the bottom for fast page loading -->
