Adds styles and fixes share copy

--- a/index.html
+++ b/index.html
@@ -26,16 +26,22 @@
 
           <div class="field group">
             <input placeholder="Escrib&iacute; tu frase ac&aacute;" type="text" id="inputText"/>
+            <button id="reset">Borrar</button>
             <button id="submit">Dale, bo.</button>
           </div>
 
           <p id="result" class="hide"></p>
 
-          <footer>
+          <p class="intro">¿Tenés amigos uruguayos y querés hablarles de una forma más familiar? ¡Mandales un mensaje traducido a uruguayo!
+          <br>
+          <br>
+          Daaale... con Uruguayiza.me, ¡sentite bien uruguayo!</p>
+          <footer class="group">
+            <span class="share">Compartilo en</span>
             <a class="share-icon" href="https://www.facebook.com/sharer/sharer.php?u=uruguayiza.me" target="_blank">
               <img src="facebook.svg" alt="Facebook">
             </a>
-            <a class="share-icon" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Furuguayiza.me&text=Compart%C3%AD%20Uruguayiza.me%20con%20tus%20amigos!!&original_referer=" target="_blank">
+            <a class="share-icon" id="twitterBtn" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Furuguayiza.me&text=¡Compart%C3%AD%20Uruguayiza.me%20con%20tus%20amigos!&original_referer=" target="_blank">
               <img src="twitter.svg" alt="Twitter">
             </a>
           </footer>
