--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
         <!-- Optimized mobile viewport -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link rel="shortcut icon" href="images/favicon.ico">
-        <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+        <link rel="shortcut icon" href="favicon.ico">
+
+        <link rel="icon" sizes="192x192" href="icon.png">
+        <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
+        <meta name="msapplication-square310x310logo" content="icon_largetile.png">
+
+        <meta property="og:image" content="http://uruguayiza.me/og-image.png">
         <!-- CSS -->
         <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
         <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
