Adds meta tags for Open Graph

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <head>
         <title>Uruguayiza.me</title>
         <meta charset="utf-8">
-        <meta name="description" content="Con Uruguayiza.me pod&eacute;s escribir como un mism&iacute;simo uruguayo! Escrib&iacute; la frase que quer&eacute;s uruguayizar, apret&aacute; el bot&oacute;n... ¡y compart&iacute; tu uruguay&eacute;z en las redes sociales!" />
+        <meta name="description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!" />
         <meta name="author" content="Sebastian Heit">
         <meta name="keywords" content="uruguay, uruguayizar, uruguayizame, uruguayiza.me, uruguayo, traducir, traducotr, chori, bonomi, chengue, alpargata, botija, gurí, uruguay nomá, maomeno" />
         <!-- Optimized mobile viewport -->
@@ -15,6 +15,11 @@
         <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
         <meta name="msapplication-square310x310logo" content="icon_largetile.png">
 
+        <!-- Open Graph -->
+        <meta property="og:url" content="http://uruguayiza.me">
+        <meta property="og:title" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!">
+        <meta property="og:locale" content="es_UY">
+        <meta property="og:type" content="website">
         <meta property="og:image" content="http://uruguayiza.me/og-image.png">
         <!-- CSS -->
         <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
