--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
       <head>
-        <title>Uruguayiza.me</title>
+        <title>Uruguayiza.me | ¡Sentite bien uruguayo!</title>
         <meta charset="utf-8">
         <meta name="description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!" />
         <meta name="author" content="Sebastian Heit">
@@ -15,12 +15,21 @@
         <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
         <meta name="msapplication-square310x310logo" content="icon_largetile.png">
 
-        <!-- Open Graph -->
+        <!-- Open Graph & Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:image" content="http://uruguayiza.me/og-image.png">
         <meta property="og:url" content="http://uruguayiza.me">
-        <meta property="og:title" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!">
+        <meta property="og:title" content="Uruguayiza.me | ¡Sentite bien uruguayo!">
+        <meta property="og:description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!">
         <meta property="og:locale" content="es_UY">
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="http://uruguayiza.me" />
+        <meta name="twitter:title" content="Uruguayiza.me | ¡Sentite bien uruguayo!" />
+        <meta name="twitter:description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!" />
+        <meta name="twitter:image" content="http://uruguayiza.me/og-image.png" />
+
         <!-- CSS -->
         <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
         <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
