Adds twitter card metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <head>
         <title>Uruguayiza.me | ¡Sentite bien uruguayo!</title>
         <meta charset="utf-8">
-        <meta name="description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!" />
+        <meta name="description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo!" />
         <meta name="author" content="Sebastian Heit">
         <meta name="keywords" content="uruguay, uruguayizar, uruguayizame, uruguayiza.me, uruguayo, traducir, traducotr, chori, bonomi, chengue, alpargata, botija, gurí, uruguay nomá, maomeno" />
         <!-- Optimized mobile viewport -->
@@ -20,14 +20,14 @@
         <meta property="og:image" content="http://uruguayiza.me/og-image.png">
         <meta property="og:url" content="http://uruguayiza.me">
         <meta property="og:title" content="Uruguayiza.me | ¡Sentite bien uruguayo!">
-        <meta property="og:description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!">
+        <meta property="og:description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo!">
         <meta property="og:locale" content="es_UY">
 
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="http://uruguayiza.me" />
         <meta name="twitter:title" content="Uruguayiza.me | ¡Sentite bien uruguayo!" />
-        <meta name="twitter:description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo y compartilo en las redes sociales!" />
+        <meta name="twitter:description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo!" />
         <meta name="twitter:image" content="http://uruguayiza.me/og-image.png" />
 
         <!-- CSS -->
