Adds yellow span to logo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <body>
 
         <div class="wrapper">
-          <h1 class="logo">Uruguayiza.me</h1>
+          <h1 class="logo">Uruguayiza<span>.me</span></h1>
 
           <div class="field group">
             <input placeholder="Escrib&iacute; tu frase ac&aacute;" type="text" id="inputText"/>
