--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="¿Ten&eacute;s amigos uruguayos y quer&eacute;s hablarles de una forma m&aacute;s familiar? ¡Mandales un mensaje traducido a uruguayo!" />
         <meta name="author" content="Sebastian Heit">
-        <meta name="keywords" content="uruguay, uruguayizar, uruguayizame, uruguayiza.me, uruguayo, traducir, traducotr, chori, bonomi, chengue, alpargata, botija, gurí, uruguay nomá, maomeno" />
+        <meta name="keywords" content="uruguay, uruguayizar, uruguayizame, uruguayiza.me, uruguayo, traducir, traductor, chori, bonomi, chengue, alpargata, botija, gurí, uruguay nomá, maomeno" />
         <!-- Optimized mobile viewport -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
         <meta name="apple-mobile-web-app-capable" content="yes" />
